fixed relative paths for js files

--- a/src/entries/entries.html
+++ b/src/entries/entries.html
@@ -44,6 +44,6 @@
     <footer>
       <p>&copy;<span id="copy-year"></span> Andrew Jeppesen</p>
     </footer>
-    <script src="../js/entries.js" type="module"></script>
+    <script src="/js/entries.js" type="module"></script>
   </body>
 </html>
