--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,6 @@
     <footer>
       <p>&copy;<span id="copy-year">2025</span> Andrew Jeppesen</p>
     </footer>
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
   </body>
 </html>
