--- a/src/login.html
+++ b/src/login.html
@@ -54,6 +54,6 @@
     <footer>
       <p>&copy;<span id="copy-year">2025</span> Andrew Jeppesen</p>
     </footer>
-    <script src="../js/login.js" type="module"></script>
+    <script src="/js/login.js" type="module"></script>
   </body>
 </html>
