--- a/src/register.html
+++ b/src/register.html
@@ -56,6 +56,6 @@
     <footer>
       <p>&copy;<span id="copy-year">2025</span> Andrew Jeppesen</p>
     </footer>
-    <script src="../js/register.js" type="module"></script>
+    <script src="/js/register.js" type="module"></script>
   </body>
 </html>
