--- a/src/entry/entry.html
+++ b/src/entry/entry.html
@@ -42,6 +42,6 @@
     <footer>
       <p>&copy;<span id="copy-year">2025</span> Andrew Jeppesen</p>
     </footer>
-    <script src="../js/entry.js" type="module"></script>
+    <script src="/js/entry.js" type="module"></script>
   </body>
 </html>
