--- a/src/journal/journal.html
+++ b/src/journal/journal.html
@@ -48,6 +48,6 @@
     <footer>
         <p>&copy;<span id="copy-year">2025</span> Andrew Jeppesen</p>
     </footer>
-    <script src="../js/editor.js" type="module"></script>
+    <script src="/js/editor.js" type="module"></script>
 </body>
 </html>
