fix: update links to use absolute paths for CSS and HTML files

--- a/src/login.html
+++ b/src/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Journal-App | Entry</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <header>
-      <a href="../index.html"><i class="arrow-left"></i>Dashboard</a>
+      <a href="/index.html"><i class="arrow-left"></i>Dashboard</a>
       <div>
         <h1 id="todays-date">[DATE]</h1>
         <button id="settings-bttn">
@@ -26,7 +26,7 @@
           <div class="settings-bar-content">
               <label for="Login">
                 Account
-                <a href="./login.html">Login</a>
+                <a href="/login.html">Login</a>
               </label>
               <label>
                 Dark Mode
@@ -39,7 +39,7 @@
     <main>
       <form id="login" action="">
         <h2>Login</h2>
-        <a href="./register.html">Dont have an account?</a>
+        <a href="/register.html">Dont have an account?</a>
         <div class="form-container">
             <label for="uname">Username</label>
             <input type="text" name="uname" id="username" required>
