--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Journal-App</title>
   </head>
   <body>
@@ -27,7 +27,7 @@
           <div class="settings-bar-content">
               <label for="Login">
                 Account
-                <a href="./login.html">Login</a>
+                <a href="/login.html">Login</a>
               </label>
               <label>
                 Dark Mode
