--- a/src/login.html
+++ b/src/login.html
@@ -28,10 +28,6 @@
                 Account
                 <a href="/login.html">Login</a>
               </label>
-              <label>
-                Dark Mode
-                <input type="checkbox" id="darkModeToggle">
-              </label>
           </div>
         </div>
       </div>
@@ -42,10 +38,10 @@
         <a href="/register.html">Dont have an account?</a>
         <div class="form-container">
             <label for="uname">Username</label>
-            <input type="text" name="uname" id="username" required>
+            <input type="text" name="uname" id="username" placeholder="username" required>
 
             <label for="passwd">Password</label>
-            <input type="password" name="passwd" id="password" required>
+            <input type="password" name="passwd" id="password" placeholder="password" required>
 
             <button type="submit">Login</button>
         </div>
