--- a/src/register.html
+++ b/src/register.html
@@ -28,10 +28,6 @@
                 Account
                  <a href="/login.html">Login</a>
               </label>
-              <label>
-                Dark Mode
-                <input type="checkbox" id="darkModeToggle">
-              </label>
           </div>
         </div>
       </div>
@@ -47,7 +43,7 @@
             <input type="password" name="passwd" id="password" placeholder="password" required>
             
             <label for="passwd">Repeat Password</label>
-            <input type="password" name="passwd-repeat" id="password-repeat" placeholder="repeat passwordd" required>
+            <input type="password" name="passwd-repeat" id="password-repeat" placeholder="repeat password" required>
 
             <button type="submit">Register</button>
         </div>
